k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: learning-app
  labels:
    name: learning-app
